--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,26 @@ services:
 
   db-server:
     image: yandex/clickhouse-server:latest
-    ulimits:
-      nofile:
-        soft: 262144
-        hard: 262144
+    tty: true
+    networks:
+      - default
+
+#    ulimits:
+#      nofile:
+#        soft: 262144
+#        hard: 262144
 #    volumes:
 #      - /path/to/your/config.xml:/etc/clickhouse-server/config.xml
 
   db-client:
     image: yandex/clickhouse-client:latest
+    networks:
+      - default
+
+networks:
+  default:
+    driver: bridge
+    enable_ipv6: true
+    ipam:
+      config:
+        - subnet: fdca:1::/48
