--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,16 @@ services:
   db-server:
     image: yandex/clickhouse-server:latest
     tty: true
+    volumes:
+      - ./config/config.xml:/etc/clickhouse-server/config.xml
+      - ./config/config-preprocessed.xml:/etc/clickhouse-server/config-preprocessed.xml
+      - ./config/users-preprocessed.xml:/etc/clickhouse-server/users-preprocessed.xml
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
     networks:
       - default
-
-#    ulimits:
-#      nofile:
-#        soft: 262144
-#        hard: 262144
-#    volumes:
-#      - /path/to/your/config.xml:/etc/clickhouse-server/config.xml
 
   db-client:
     image: yandex/clickhouse-client:latest
