--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,9 @@ version: '2.1'
 services:
 
   db-server:
-    image: yandex/clickhouse-server:latest
-    tty: true
-    volumes:
-      - ./config/config.xml:/etc/clickhouse-server/config.xml
-      - ./config/config-preprocessed.xml:/etc/clickhouse-server/config-preprocessed.xml
-      - ./config/users-preprocessed.xml:/etc/clickhouse-server/users-preprocessed.xml
+    build:
+      context: .
+      dockerfile: Dockerfile
     ulimits:
       nofile:
         soft: 262144
@@ -16,10 +13,25 @@ services:
     networks:
       - default
 
-  db-client:
-    image: yandex/clickhouse-client:latest
-    networks:
-      - default
+#  db-server:
+#    image: yandex/clickhouse-server:latest
+#    tty: true
+#    volumes:
+#      - ./config/config.xml:/etc/clickhouse-server/config.xml
+#      - ./config/users.xml:/etc/clickhouse-server/users.xml
+#      - ./config/config-preprocessed.xml:/etc/clickhouse-server/config-preprocessed.xml
+#      - ./config/users-preprocessed.xml:/etc/clickhouse-server/users-preprocessed.xml
+#    ulimits:
+#      nofile:
+#        soft: 262144
+#        hard: 262144
+#    networks:
+#      - default
+
+#  db-client:
+#    image: yandex/clickhouse-client:latest
+#    networks:
+#      - default
 
 networks:
   default:
